# ta_user_svc

./: Makefile  README.md  pyproject.toml
migrations/: env.py
src/ta_user_svc/: app.py  main.py
src/ta_user_svc/models/: base.py  user.py
src/ta_user_svc/routers/: __init__.py  user_login.py  user_logout.py  user_refresh.py  user_registration.py
tests/: conftest.py  test_user_login.py  test_user_logout.py  test_user_refresh.py  test_user_registration.py
